--- a/style.css
+++ b/style.css
@@ -1,57 +1,12 @@
 *{box-sizing:border-box;}
-
-#topHeader{color:green; background:grey;}
-
-
-
-#jumbotron {
-  background: url(https://cdn.pixabay.com/photo/2021/09/28/05/32/physics-6663261_960_720.jpg)
-  center center no-repeat;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 90vh;
-}
-
-#jumbotron > h2 {
-  color: white;
-  text-align: center;
-  font-family:"Century Gothic",sans-serif;
-}
-
-#jumbotron > a {
-  text-decoration: none;
-  background-color: white;
-  font-size: 1.5em;
-  padding: 1.5rem;
-  border-radius: 10px;
-}
-
 #root{font-family:"Helvetica",sans-serif;}
+
+#fb-blue{border:5px solid #3B5998;background-color:#dfe3ee}
 
 
 body{background-color:#ffd1d1;
       }
 
-
-form {
-  border: solid 1px black;
-  display: flex;
-  flex-direction: column;
-  margin: 1rem 1rem;
-}
-
-form > * {
-  margin: .5rem;
-}
-
-form > input[type=submit] {
-  width: 40%;
-  margin: .5rem;
-  margin-right: auto;
-}
 
 footer {
   border-top: solid 1px black;
@@ -59,116 +14,10 @@ footer {
   margin: 1rem 1rem;
 }
 
-#bio {
-  margin: 1rem;
-}
-
-#gallery {
-  border: solid 1px black;
-  clear: both;
-}
-
-#gallery > * {
-  padding: 0.5rem;
-}
-
-#gallery img {
-  display: block;
-  height: auto;
-  width: 92.5%;
-  margin: auto;
-}
-
-@media (max-width: 549px){
-  .hidden--mobile {
-    display: none !important;
-  }
-
-  nav {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  nav > i {
-    padding: 1rem;
-    font-size: 2em;
-  }
-
-  nav > ul {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 0;
-  }
-
-  nav > ul > li {
-    padding: .5rem;
-    list-style-type: none;
-  }
-
-  #bio img {
-    float: left;
-    width: 40%;
-    height: auto;
-    margin-right: 1rem;
-  }
-
-  #gallery {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-@media (min-width: 550px){
-  #jumbotron {
-    height: 60vh;
-  }
-
-  nav > ul {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 0 0;
-  }
-
-  nav > ul > li {
-    display: inline-block;
-    text-decoration: none;
-    border: 1px solid;
-    padding: .5rem .5rem;
-    border-radius: 25px;
-  }
-
-  nav > .fa-bars {
-    display: none;
-  }
-
-  #bio {
-    margin-right: 3rem;
-  }
-
-  #bio img {
-    float: left;
-    width: 25%;
-    height: auto;
-    margin-right: 1rem;
-  }
-
-  #gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
-    background-color:cornsilk;
-  }
-}
+nav a{color:grey;}
 
 
 
-section::before{content:"Template by Tomoki";
-  border:1px solid white;
-  position:absolute;
-  color:white;
-  background:red;
-  font-family:"Lucida Console","Lucida",sans-serif;
-  opacity:0.5;
-  display:none;}
+/*@media (max-width: 549px)*/
+
+/*@media (min-width: 550px)*/
