--- a/style.css
+++ b/style.css
@@ -1,23 +1,58 @@
 *{box-sizing:border-box;}
-#root{font-family:"Helvetica",sans-serif;}
+
+html{max-width:500px;
+      margin:auto;
+      background:#0f0f0f;
+    }
+
+
+
+#nav-links{display:flex;
+           flex-direction:row;
+           }
+#nav-links li{list-style-type:none;}
+
+#nav-links li a{color:grey;background:#fff;}
+#nav-links li a:hover{background:#ccc;}
+
+
 
 #fb-blue{border:5px solid #3B5998;background-color:#dfe3ee}
 
 
-body{background-color:#ffd1d1;
-      }
-
-
 footer {
-  border-top: solid 1px black;
+  background:#293340;
+
+  color:#fdfdfd;
+
+  border-top: solid 5px #f0f0f0;
   padding: 2rem 2rem 4rem;
-  margin: 1rem 1rem;
+  margin: auto;
+
+  --footer-a-color:#c5d9ff;
+  --footer-a-hover-color:#d9edff;
+  --footer-a-visited-color:var(--footer-a-color);
 }
 
-nav a{color:grey;}
+footer a{color:var(--footer-a-color);
+        text-decoration:none;}
+footer a:hover{color:--footer-a-hover-color;
+              text-decoration:underline;}
+footer a:visited{color:var(--footer-a-visited-color);}
+footer a:visited:hover{color:var(--footer-a-hover-color);}
+
+body{background-color:#f9f9f9;font-family:"Lato","Helvetica",sans-serif;}
 
 
 
 /*@media (max-width: 549px)*/
 
 /*@media (min-width: 550px)*/
+
+
+/*FONT STYLES
+font-family: 'Catamaran', sans-serif;
+font-family: 'Lato', sans-serif;
+font-family: 'Quicksand', sans-serif;
+
+*/
