--- a/style.css
+++ b/style.css
@@ -1,19 +1,42 @@
 *{box-sizing:border-box;}
 
-html{max-width:500px;
+html{max-width:1920px;
       margin:auto;
       background:#0f0f0f;
     }
+    header{margin-left:4%;
+           margin-right:4%;}
+    main{margin-left:4%;
+         margin-right:4%;}
 
+#input-form{display:flex;}
+  #input-form-at-sign{background:rgb(184, 184, 184);
+                      border:2px solid #000;
+                      border-right:none;
+                      border-radius:5px 0 0 5px;
+                      color:#fff;
+                      font-weight:bold;
+                      padding-left:2px;
+                      padding-right:2px;}
+#input-form input[type=text]{border:0 1px 0 1px;}
+#input-form input[type=text]:focus{background:#999;border:5px solid green;outline:none;}
 
-
-#nav-links{display:flex;
+#nav-links{background:rgb(100, 150, 240);
+           padding-top:6px;
+           padding-bottom:6px;
+           display:flex;
            flex-direction:row;
            }
 #nav-links li{list-style-type:none;}
 
-#nav-links li a{color:grey;background:#fff;}
-#nav-links li a:hover{background:#ccc;}
+#nav-links li a{background:rgb(194, 216, 255);
+                color:grey;
+                font-weight:600;
+                padding:5px 15px;
+                text-decoration:none;}
+#nav-links li a:hover{background:rgb(90, 120, 180);
+                      color:#fff;
+                      font-weight:700;}
 
 
 
@@ -41,13 +64,19 @@ footer a:hover{color:--footer-a-hover-color;
 footer a:visited{color:var(--footer-a-visited-color);}
 footer a:visited:hover{color:var(--footer-a-hover-color);}
 
+#footer-sections{display:flex;}
+
 body{background-color:#f9f9f9;font-family:"Lato","Helvetica",sans-serif;}
 
 
 
-/*@media (max-width: 549px)*/
+@media (max-width: 549px){
 
-/*@media (min-width: 550px)*/
+}
+
+@media (min-width: 550px,max-width:1300px){
+
+}
 
 
 /*FONT STYLES
