--- a/style.css
+++ b/style.css
@@ -9,40 +9,105 @@ html{max-width:1920px;
     main{margin-left:4%;
          margin-right:4%;}
 
+body{margin:auto;}
+#root{margin:auto;
+      background:#293340;
+      color:#fff;
+      font-weight:400px;}
+
+#topHeader{color:#fff;}
+
 #input-form{display:flex;}
   #input-form-at-sign{background:rgb(184, 184, 184);
                       border:2px solid #000;
                       border-right:none;
-                      border-radius:5px 0 0 5px;
+                      border-radius:4px 0 0 4px;
                       color:#fff;
                       font-weight:bold;
                       padding-left:2px;
                       padding-right:2px;}
-#input-form input[type=text]{border:0 1px 0 1px;}
-#input-form input[type=text]:focus{background:#999;border:5px solid green;outline:none;}
-
-#nav-links{background:rgb(100, 150, 240);
-           padding-top:6px;
-           padding-bottom:6px;
+#input-form input[type=text]{border:0 2px 0 2px solid black;}
+#input-form input[type=text]:disabled{border:2px solid black;
+                                      background:#cccccc;
+                                      color:green;}
+#input-form input[type=text]:focus{background:#999;
+                                    border:5px solid green;
+                                    outline:none;}
+nav{margin:auto;
+  position:sticky;
+  top:0;
+  overflow:hidden;
+}
+#nav-links{background:#3b5998;
            display:flex;
            flex-direction:row;
+           justify-content:center;
+           align-content:start;
+           font-size:2.5rem;
+           height:56px;
            }
-#nav-links li{list-style-type:none;}
+#nav-links li{list-style-type:none;
+              height:58px;}
 
-#nav-links li a{background:rgb(194, 216, 255);
+#nav-links li a{background:#cfd8ff;
                 color:grey;
-                font-weight:600;
+                font-weight:400;
                 padding:5px 15px;
-                text-decoration:none;}
+                text-decoration:none;
+                display:flex;
+                justify-content:space-between;}
 #nav-links li a:hover{background:rgb(90, 120, 180);
                       color:#fff;
-                      font-weight:700;}
-
-
+                      font-weight:600;}
+.nav-text{margin:auto;}
+.nav-icon{margin:auto;
+          padding-left:30px;
+          padding-right:30px;
+        }
+/* .nav-icon::after{background:rgba(150,150,150,100);
+                  position:relative;
+                  left:-30px;
+                  display:block;
+                  z-index:2;
+                  opacity:50%;
+                  height:45px;width:45px;
+                  content:""} */
+.Home-icon .nav-icon{background:url("img/home.png");
+                          background-position:left;
+                          background-size:contain;
+                          background-repeat:no-repeat;
+                          height:45px;width:45px;}
+.Twitter-icon .nav-icon{background:url("img/twitter.png");
+                          background-position:left;
+                          background-size:contain;
+                          background-repeat:no-repeat;
+                          height:45px;width:45px;}
+.Instagram-icon .nav-icon{background:url("img/instagram.png");
+                          background-position:left;
+                          background-size:contain;
+                          background-repeat:no-repeat;
+                          height:45px;width:45px;}
+.Youtube-icon .nav-icon{background:url("img/youtube.png");
+                          background-position:left;
+                          background-size:contain;
+                          background-repeat:no-repeat;
+                          height:45px;width:45px;}
+.Facebook-icon .nav-icon{background:url("img/facebook.png");
+                          background-position:left;
+                          background-size:contain;
+                          background-repeat:no-repeat;
+                          height:45px;width:45px;}
+          /* background:url("img/home.png"); */
+          /* background:url("img/twitter.png"); */
+          /* background:url("img/instagram.png"); */
+          /* background:url("img/youtube.png"); */
+          /* background:url("img/facebook.png"); */
 
 #fb-blue{border:5px solid #3B5998;background-color:#dfe3ee}
-
-
+.text-content{max-width:750px;
+              background:rgb(40, 60, 100);color:#fff;
+              padding:10px;}
+iframe{height:800px;width:550px;}
 footer {
   background:#293340;
 
@@ -70,12 +135,12 @@ body{background-color:#f9f9f9;font-family:"Lato","Helvetica",sans-serif;}
 
 
 
-@media (max-width: 549px){
-
+@media (max-width: 499px){
+/*nav changes, text-content changes iframe changes*/
 }
 
-@media (min-width: 550px,max-width:1300px){
-
+@media (min-width: 500px,max-width:800px){
+/* nav changes,text-content changes, iframe changes */
 }
 
 
