final push for presentation

--- a/style.css
+++ b/style.css
@@ -104,10 +104,32 @@ nav{margin:auto;
           /* background:url("img/facebook.png"); */
 
 #fb-blue{border:5px solid #3B5998;background-color:#dfe3ee}
-.text-content{max-width:750px;
-              background:rgb(40, 60, 100);color:#fff;
-              padding:10px;}
-iframe{height:800px;width:550px;}
+.page-content{border:2px solid #c5d9ff;
+              background:#12244d;color:#fff;
+              margin-top:0.4rem;
+              margin-bottom:0.1rem;
+              padding:10px;
+              display:flex;
+              justify-content:space-evenly;
+              flex-wrap:wrap;
+              align-content:center;
+            }
+.self-content{display:flex;
+              justify-content:space-around;
+              flex-wrap:wrap;
+              align-content:center;}
+.text-content{max-width:750px;padding:20px;
+              width:auto;}
+.image-wireframes{height:450px;width:610px;
+                  background:url(img/wireframes.png);
+                  background-repeat:no-repeat;
+                  background-size: contain;
+                  display:block;}
+
+
+.tw-iframe{height:800px; width:500px; margin:15px auto;}
+.ig-iframe{height:800px; width:500px; margin:15px auto;}
+
 footer {
   background:#293340;
 
@@ -134,13 +156,54 @@ footer a:visited:hover{color:var(--footer-a-hover-color);}
 body{background-color:#f9f9f9;font-family:"Lato","Helvetica",sans-serif;}
 
 
-
-@media (max-width: 499px){
-/*nav changes, text-content changes iframe changes*/
+@media(max-width:400px;){
+.text-content{max-width:220px}
+.text-content h1{max-width:220px;}
+.text-content p{max-width:220px;}
 }
 
-@media (min-width: 500px,max-width:800px){
+@media (max-width: 509px){
+/*nav changes, text-content changes, iframe changes*/
+.ig-iframe{height:600px;}
+.tw-iframe{}
+.self-content{display:block;margin:auto;}
+.text-content{margin:auto;display:block;
+              left:20px;
+              max-width:300px;}
+.text-content h1{max-width:300px;}
+.text-content p{max-width:300px;}
+}
+
+@media(max-width:600px;){
+  nav{position:static;}
+  #nav-links li a{padding-right:0px;
+                  padding-left:0px;
+                  max-width:50px;}
+                  .nav-icon{padding-left:0px;padding-right:0px;}
+}
+
+@media (max-width:751px){
+  /* There is no inherent height bc it's not an image */
+  .self-content{display:block;margin:auto;}
+  .text-content{margin:auto;display:block;
+                position:relative;}
+  .text-content h1{width:422px;}
+  .text-content p{width:422px;}
+  .image-wireframes{width:90%;height:300px;
+                    margin:auto;
+                  }
+}
+
+@media (max-width:1550px){
+  .text-content{max-width:1000px;}
+}
+@media (max-width:1150px){
 /* nav changes,text-content changes, iframe changes */
+#nav-links li a{display:inline-block;}
+#nav-links li a span{display:none;}
+.nav-text{display:none;}
+.ig-iframe{}
+.tw-iframe{}
 }
 
 
